--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -45,6 +45,10 @@
   name = "google.golang.org/grpc"
   version = "1.27.1"
 
+[[constraint]]
+  name = "github.com/go-pg/migrations"
+  version = "6.7.3"
+
 [prune]
   go-tests = true
   unused-packages = true
