--- a/svc/resources/Gopkg.toml
+++ b/svc/resources/Gopkg.toml
@@ -24,6 +24,9 @@
 #   go-tests = true
 #   unused-packages = true
 
+[[constraint]]
+  name = "github.com/go-pg/migrations"
+  version = "6.7.3"
 
 [[constraint]]
   name = "github.com/golang/protobuf"
